--- a/views/visit.erb
+++ b/views/visit.erb
@@ -10,6 +10,7 @@ $(function() {
   // после загрузки страницы
 
   $('#color').simplecolorpicker();
+  $('#datetimepicker').datetimepicker();
 
 });
 
@@ -30,7 +31,7 @@ $(function() {
 
   <div class="form-group">
     <label>Когда вас ждать?</label>
-    <input name="date_time" type="text" class="form-control" placeholder="Введите дату и время" value="<%= @date_time %>">
+    <input id="datetimepicker" name="date_time" type="text" class="form-control" placeholder="Выберите дату и время" value="<%= @date_time %>">
   </div>
 
 
