Add temp showuser view

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -46,6 +46,7 @@
 			      <li><a href="/visit">Записаться</a></li>
 			      <li><a href="/contacts">Contacts</a></li>
 			      <li><a href="/admin">Admin</a></li>
+			      <li><a href="/showusers">dbView</a></li>
 			    </ul>
 			  </div><!--/.nav-collapse -->
 			</nav>
